objects/Interaction__c.object
<CustomObject>
    <label>Interaction</label>
    <pluralLabel>Interactions</pluralLabel>
    <nameField>
        <label>Interaction Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>InteractionType__c</fullName>
        <label>Interaction Type</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Note</fullName>
            </picklistValues>
        </picklist>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>LongTextArea</type>
        <length>32000</length>
    </fields>
    <fields>
        <fullName>RelatedCustomer__c</fullName>
        <label>Related Customer</label>
        <type>Lookup</type>
        <referenceTo>Account,Contact</referenceTo>
    </fields>
</CustomObject>